crates/hdx_proc_macro/src/snapshots/hdx_proc_macro__test__value_fixed_range_color2_optimized.snap
---
source: crates/hdx_proc_macro/src/test.rs
expression: pretty
---
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
struct Foo(pub types::Color, pub types::Color);
#[automatically_derived]
impl<'a> ::hdx_parser::Peek<'a> for Foo {
    fn peek(p: &::hdx_parser::Parser<'a>) -> bool {
        use ::hdx_parser::Peek;
        p.peek::<types::Color>()
    }
}
#[automatically_derived]
impl<'a> ::hdx_parser::Parse<'a> for Foo {
    fn parse(p: &mut ::hdx_parser::Parser<'a>) -> ::hdx_parser::Result<Self> {
        use ::hdx_parser::Parse;
        let val0 = p.parse::<types::Color>()?;
        let val1 = p.parse::<types::Color>()?;
        Ok(Self(val0, val1))
    }
}
#[automatically_derived]
impl ::hdx_parser::ToCursors for Foo {
    fn to_cursors(&self, s: &mut impl ::hdx_parser::CursorSink) {
        ::hdx_parser::ToCursors::to_cursors(&self.0, s);
        ::hdx_parser::ToCursors::to_cursors(&self.1, s);
    }
}
