crates/hdx_proc_macro/src/snapshots/hdx_proc_macro__test__value_lone_type_errors_with_lifetime_when_necessary.snap
---
source: crates/hdx_proc_macro/src/test.rs
expression: pretty
---
::core::compile_error! {
    "this object needs the <'a> lifetime but it didn't have it. Add it"
}
