crates/hdx_proc_macro/src/snapshots/hdx_proc_macro__test__value_with_punctuated_optional_group.snap
---
source: crates/hdx_proc_macro/src/test.rs
expression: pretty
---
::core::compile_error! {
    "wrong structure for this syntax, please redefine as an Enum"
}
